# uou_base_rs

./: Cargo.toml
src/core/: README.md  app.rs  config.rs  data.rs  logs.rs  mod.rs  request.rs  response.rs
src/core/server/: axum.rs  mod.rs
src/error/: mod.rs
