[package]
name = "kratos_rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"


[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_yaml = "0.9.14"
# async-trait = "0.1.56"

axum = { version = "0.7"}
hyper = {version = "1", features = ["full"]}

# 日志
tracing = "0.1"
opentelemetry = { version = "0.24", default-features = false, features = ["trace", "logs"] }
opentelemetry-otlp = "0.17" # or the latest version
tracing-subscriber = { version = "0.3.17" }
tracing-opentelemetry = "0.25.0"
opentelemetry-stdout = {version = "0.5", features = [           
    "async-trait",
   "futures-util",
   "logs",
   "metrics",
   "thiserror",
   "trace"
]}
opentelemetry-appender-log = {version = "0.5", default-features = false}
opentelemetry_sdk = {version = "0.24", features=["logs", "rt-tokio"]}


tower-http = { version = "0.5", features = ["fs", "trace"] }
tower-service = "0.3.2"
tower-layer = "0.3.2"


# grpc 生成
prost = "0.13"
prost-types = "0.13"

# GRPC Toic GRPC服务
tonic = "0.12"
http-body = "1"
http = "1"
tower = "0.4.13"
futures = "0.3.28"
tonic-reflection = "0.12"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
chrono = {version = "0.4.24", features = ["serde"]}
opentelemetry-appender-tracing = "0.5.0"



